// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] MarketTable Should render MarketTable with skeletons and fallback set of listingKeys. And with data, if loading is done 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <table
      class="MarketTable"
    >
      <thead>
        <tr>
          <th
            class="TrendArrow"
          />
          <th
            class="Name"
          >
            Name
          </th>
          <th
            class="Price"
          >
            Aktuell
          </th>
          <th
            class="Percentage"
          >
            +/-%
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
        <tr
          class="Skeleton"
        >
          <td
            class="TrendArrow"
          />
          <td
            class="Name"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Price"
          >
            <span>
               
            </span>
          </td>
          <td
            class="Percentage"
          >
            <span>
               
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`[Component] MarketTable Should render MarketTable with skeletons and fallback set of listingKeys. And with data, if loading is done 2`] = `
<div>
  <div
    class="Wrapper"
  >
    <table
      class="MarketTable"
    >
      <thead>
        <tr>
          <th
            class="TrendArrow"
          />
          <th
            class="Name"
          >
            Name
          </th>
          <th
            class="Price"
          >
            Aktuell
          </th>
          <th
            class="Percentage"
          >
            +/-%
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Positive Up"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/aktien/schweiz/smi-index"
              >
                SMI
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Positive Up"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              11'241.52
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Positive"
              >
                +0.20%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Positive Up"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/aktien/schweiz/spi-index"
              >
                SPI
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Positive Up"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              14'817.53
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Positive"
              >
                +0.21%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Positive Up"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/aktien/europa/euro-stoxx-50"
              >
                EURO STOXX 50
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Positive Up"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              4'399.66
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Positive"
              >
                +0.03%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Negative Down"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/aktien/deutschland/dax-index-frankfurt-fra"
              >
                DAX
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Negative Down"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              16'055.38
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Negative"
              >
                -0.16%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Negative Down"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/aktien/usa-und-kanada/djia"
              >
                DJ
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Negative Down"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              34'391.11
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Negative"
              >
                -0.07%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Positive Up"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/aktien/usa-und-kanada/nasdaq-100"
              >
                NASDAQ 100
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Positive Up"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              15'208.69
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Positive"
              >
                +0.19%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Negative Down"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/waehrungen/devisen/chf-spot-rates-wichtigste-waehrungen"
              >
                EUR/CHF
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Negative Down"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              0.9763
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Negative"
              >
                -0.20%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Negative Down"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/waehrungen/devisen/usd-spot-rates"
              >
                USD/CHF
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Negative Down"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              0.8960
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Negative"
              >
                -0.06%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Positive Up"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/devisen-zinsen/bundesobli-1190007/ikr/chf"
              >
                BUNDESOBLI
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Positive Up"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              0.9100
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Positive"
              >
                +1.56%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Positive Up"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/rohstoffe-edelmetalle/oelpreis-brent-274207/lsd/usd"
              >
                Ölpreis (Brent)
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Positive Up"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              75.82
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Positive"
              >
                +1.15%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              –
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kurse/rohstoffe-edelmetalle/uebersicht/preise-pro-kilo-und-unze"
              >
                Fallback name for inactive instrument
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              –
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              –
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
        <tr>
          <td
            class="TrendArrow"
          >
            <span
              class=""
            >
              <div
                addclass="Negative Down"
                data-testid="mocked-icon"
                type="IconArrowRight"
              />
            </span>
          </td>
          <td
            class="Name"
          >
            <div
              class=""
            >
              <a
                class="Link"
                data-testid="mocked-link"
                href="/kryptowaehrungen/btc-999999915312/cccagg/usd"
              >
                Bitcoin
              </a>
            </div>
            <p>
              <span>
                <span
                  class=""
                >
                  <div
                    addclass="Negative Down"
                    data-testid="mocked-icon"
                    type="IconArrowRight"
                  />
                </span>
              </span>
              <span />
              <span />
            </p>
          </td>
          <td
            class="Price"
          >
            <span
              class=""
            >
              30'961.26
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
          <td
            class="Percentage"
          >
            <span
              class=""
            >
              <span
                class="Negative"
              >
                -0.63%
              </span>
            </span>
            <p>
              <span>
                <span
                  class=""
                >
                  –
                </span>
              </span>
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
